--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/electron": "^1.4.38",
     "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
+    "electron": "^36.2.1",
     "html-webpack-plugin": "^5.6.3",
     "prisma": "^6.8.2",
     "style-loader": "^4.0.0",
@@ -36,6 +38,12 @@
     "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
-    "@prisma/client": "^6.8.2"
+    "@prisma/client": "^6.8.2",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
+    "@types/react-router-dom": "^5.3.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.0"
   }
 }
