--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
   "license": "ISC",
   "devDependencies": {
     "@types/electron": "^1.4.38",
+    "autoprefixer": "^10.4.21",
     "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "electron": "^36.2.1",
     "html-webpack-plugin": "^5.6.3",
+    "postcss": "^8.5.3",
     "prisma": "^6.8.2",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^4.1.7",
     "ts-loader": "^9.5.2",
     "webpack": "^5.99.8",
     "webpack-cli": "^6.0.1",
