--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.37.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/electron": "^1.4.38",
     "@types/keytar": "^4.4.2",
     "@types/node": "^20.8.2",
@@ -55,7 +56,7 @@
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "@types/react-router-dom": "^5.3.3",
-    "electron-env-parser": "^1.1.0",
+    "crypto-js": "^4.2.0",
     "electron-store": "^8.1.0",
     "keytar": "^7.9.0",
     "react": "^19.1.0",
