--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "@types/react-dom": "^19.1.5",
     "@types/react-router-dom": "^5.3.3",
     "crypto-js": "^4.2.0",
+    "date-fns": "^2.30.0",
     "electron-store": "^8.1.0",
     "keytar": "^7.9.0",
+    "nanoid": "^3.3.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
