--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "electron dist/main/main.js",
     "dev": "concurrently \"npm run dev:react\" \"npm run dev:electron\"",
     "dev:react": "webpack serve --mode development",
-    "dev:electron": "wait-on http://localhost:3000 && electron .",
+    "dev:electron": "wait-on http://localhost:3000 && cross-env NODE_ENV=development electron .",
     "build": "npm run build:react && npm run build:electron",
     "build:react": "webpack --mode production",
     "build:electron": "tsc -p src/main/tsconfig.electron.json",
@@ -28,6 +28,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.37.0",
+    "@tailwindcss/postcss": "^4.1.7",
     "@types/crypto-js": "^4.2.2",
     "@types/electron": "^1.4.38",
     "@types/keytar": "^4.4.2",
@@ -40,6 +41,7 @@
     "electron-builder": "^24.9.1",
     "html-webpack-plugin": "^5.6.3",
     "postcss": "^8.5.3",
+    "postcss-loader": "^8.1.1",
     "prisma": "^6.8.2",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.7",
@@ -47,6 +49,7 @@
     "typescript": "^5.2.2",
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^0.34.4",
+    "wait-on": "^8.0.3",
     "webpack": "^5.99.8",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1"
